--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,4 +1,4 @@
-name: deploy-container-1
+name: deploy-container
 
 on:
   push:
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'packages/container/**'
+  workflow_dispatch: # Allows manual triggering
 
 defaults:
   run:
@@ -25,4 +26,4 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
